[package]
name = "emoji2svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "3.0.5", features = ["derive"] }

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
