[package]
name = "rust-rlua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = {version = "0.9.5", features = ["lua54"]}
romaji_kana_cvt_rust = { git = "https://github.com/Comamoca/romaji_kana.rs", version = "1.3.1" }
