[package]
name = "rust-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
valq = "0.1.0"
reqwest = "0.11.20"
tokio = { version = "1", features = ["full"] }
